--- a/Changes
+++ b/Changes
@@ -3,5 +3,5 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
 
 0.001-TRIAL  2013-03-09 16:56:29 PST-0800 (Karen Etheridge)
-          - ...
+          - Initial release.
 
