:no_end_test, for when you really don't want to do things in END

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - ':no_end_test' option added
 
 0.001-TRIAL  2013-03-09 16:56:29 PST-0800 (Karen Etheridge)
           - Initial release.
