demonstrate compatibility with skip_all

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
           - ':no_end_test' option added
+          - test added showing that we play nicely with 'skip_all'
 
 0.001-TRIAL  2013-03-09 16:56:29 PST-0800 (Karen Etheridge)
           - Initial release.
