--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - Test suite (and code) fixed to work in the presence of
+            Test::Builder 1.005+ (TB2)
 
 0.002     2013-03-14 14:47:30 PDT-0700 (Karen Etheridge)
           Releasing as non-TRIAL for greater visibility.
