--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - re-release with fixed compile test
 
 0.009     2013-09-11 04:49:55Z (Karen Etheridge)
           - fixed error in synopsis (we do not export anything by default)
