--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - unnecessary tests removed
 
 0.010     2013-09-25 03:29:53Z (Karen Etheridge)
           - re-release with fixed compile test
