see https://github.com/dagolden/Dist-Zilla-Plugin-Test-ReportPrereqs/pull/6

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - re-release to fix t/00-report-prereqs.t use of
+            CPAN::Meta::Requirements
 
 0.011     2013-10-12 22:15:02Z (Karen Etheridge)
           - unnecessary tests removed; CONTRIBUTING file added
