--- a/Changes
+++ b/Changes
@@ -3,8 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
 
 0.014     2014-03-01 22:08:26Z
-          - fix test that fails when FOO or BAR environment variables are set
-          (RT#93447)
+          - fix test that was failing when FOO or BAR environment variables
+            were set (RT#93447)
 
 0.013     2013-12-14 21:26:06Z
           - update configure_requires checking in Makefile.PL
