Devel::Confess before 0.007005 would hand us a warning message without a newline, causing Test::Warnings itself to be reported as the origin of the warning
to reproduce:
perl -wle'use Test::Warnings ":no_end_test"; use Devel::Confess; warn "foo"'
(resolved in RT#100951)

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - handle other warning handlers passing us partial warning messages
+            by re-adding the source file and line number
 
 0.016     2014-06-21 04:04:55Z
           - fix prereq problem with last release - now no longer testing the
