Carp 1.25 added a dot to the end of messages
e.g. see
http://www.cpantesters.org/cpan/report/72129c0c-857b-11e4-b415-1bee227a829d

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - fix test to not depend on message formatting changes in newer Carp
 
 0.017     2014-12-16 20:17:22Z
           - handle other warning handlers passing us partial warning messages
