changelog for PR#7

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - fix test to allow for special characters (e.g. MSWin32 file
+            separators) in filenames (A. Sinan Unur, PR#7)
 
 0.018     2014-12-17 18:17:30Z
           - fix test to not depend on message formatting changes in newer Carp
