fix unparsable $VERSION declaration (RT#101239)

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - re-release to fix problematic $VERSION declaration (RT#101239)
 
 0.019     2014-12-18 20:07:02Z
           - fix test to allow for special characters (e.g. MSWin32 file
