increment $VERSION after release

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
-Revision history for Test-Warnings
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
 
 0.021     2015-03-21 18:48:27Z
           - add a x_breaks entry for conflicting versions of File::pushd which
