propagate the warning to other __WARN__ handlers
For __DIE__ handlers, simply calling die($msg) is sufficient for other __DIE__
handlers to see the message, but __WARN__ handlers are not called when calling
warn() inside one, so we need to do this explicitly.  One observable side
effect of this change is that Devel::Confess will be able to provide stack
trades for warnings when Test::Warnings is also loaded.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Test-Warnings
 
 {{$NEXT}}
+          - propagate all warnings to any previously-declared __WARN__
+            handlers (unlike with __DIE__, merely calling warn() is not
+            sufficient)
 
 0.021     2015-03-21 18:48:27Z
           - add a x_breaks entry for conflicting versions of File::pushd which
