--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Test-Warnings
 
 {{$NEXT}}
+          - remove diagnostics accidentally left in new test
 
 0.023     2015-12-22 06:44:24Z
           - properly handle propagating warnings to previously declared
