--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Test-Warnings
 
+{{$NEXT}}
+
 0.024     2015-12-24 18:44:29Z
           - remove diagnostics accidentally left in new test
 
