--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Test::Warnings - Test for warnings and the lack of them
 
 =head1 VERSION
 
-version 0.026
+version 0.027
 
 =head1 SYNOPSIS
 
@@ -183,6 +183,16 @@ Imports all functions listed above
 Disables the addition of a C<had_no_warnings> test
 via C<END> or C<done_testing>
 
+=head2 C<:fail_on_warning>
+
+=for stopwords unexempted
+
+When used, fail immediately when an unexempted warning is generated (as opposed to waiting until
+L</had_no_warnings> or C<done_testing> is called).
+
+I recommend you only turn this option on when debugging a test, to see where a surprise warning is coming from,
+and rely on the end-of-tests check otherwise.
+
 =head1 CAVEATS
 
 =for stopwords smartmatch TODO irc
@@ -259,9 +269,7 @@ L<blogs.perl.org: YANWT (Yet Another No-Warnings Tester)|http://blogs.perl.org/u
 
 =item *
 
-L<strictures> - which makes all warnings fatal in tests, hence lessening
-
-the need for special warning testing
+L<strictures> - which makes all warnings fatal in tests, hence lessening the need for special warning testing
 
 =item *
 
@@ -282,7 +290,7 @@ There is also a mailing list available for users of this distribution, at
 L<http://lists.perl.org/list/perl-qa.html>.
 
 There is also an irc channel available for users of this distribution, at
-L<irc://irc.perl.org/#perl-qa>.
+L<C<#perl> on C<irc.perl.org>|irc://irc.perl.org/#perl-qa>.
 
 I am also usually active on irc, as 'ether' at C<irc.perl.org>.
 
@@ -290,11 +298,25 @@ I am also usually active on irc, as 'ether' at C<irc.perl.org>.
 
 Karen Etheridge <ether@cpan.org>
 
-=head1 CONTRIBUTOR
+=head1 CONTRIBUTORS
 
-=for stopwords A. Sinan Unur
+=for stopwords A. Sinan Unur Graham Knop Leon Timmermans
+
+=over 4
+
+=item *
 
 A. Sinan Unur <nanis@cpan.org>
+
+=item *
+
+Graham Knop <haarg@haarg.org>
+
+=item *
+
+Leon Timmermans <fawaka@gmail.com>
+
+=back
 
 =head1 COPYRIGHT AND LICENCE
 
