--- a/README.pod
+++ b/README.pod
@@ -8,7 +8,7 @@ Test::Warnings - Test for warnings and the lack of them
 
 =head1 VERSION
 
-version 0.028
+version 0.029
 
 =head1 SYNOPSIS
 
@@ -193,6 +193,11 @@ L</had_no_warnings> or C<done_testing> is called).
 I recommend you only turn this option on when debugging a test, to see where a surprise warning is coming from,
 and rely on the end-of-tests check otherwise.
 
+=head2 C<:report_warnings>
+
+When used, C<had_no_warnings()> will print all the unexempted warning content, in case it had been suppressed
+earlier by other captures (such as L<Test::Output/stderr_like> or L<Capture::Tiny/capture>).
+
 =head1 CAVEATS
 
 =for stopwords smartmatch TODO irc
@@ -300,7 +305,7 @@ Karen Etheridge <ether@cpan.org>
 
 =head1 CONTRIBUTORS
 
-=for stopwords Graham Knop A. Sinan Unur Leon Timmermans
+=for stopwords Graham Knop A. Sinan Unur Leon Timmermans Tina Mueller
 
 =over 4
 
@@ -315,6 +320,10 @@ A. Sinan Unur <nanis@cpan.org>
 =item *
 
 Leon Timmermans <fawaka@gmail.com>
+
+=item *
+
+Tina Mueller <cpan2@tinita.de>
 
 =back
 
