--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Test-Warnings
 
+{{$NEXT}}
+
 0.031     2021-07-13 22:13:48Z
           - remove unneeded develop prereqs that caused metacpan to unduly
             raise the river position of some dependent modules
