--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Test-Warnings
 
 {{$NEXT}}
+          - new config variable, $ENV{PERL_TEST_WARNINGS_ONLY_REPORT_WARNINGS},
+          for temporarily turning failures into reports
 
 0.031     2021-07-13 22:13:48Z
           - remove unneeded develop prereqs that caused metacpan to unduly
