increment $VERSION after 0.032 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Test-Warnings
 
+{{$NEXT}}
+
 0.032     2023-09-30 23:36:50Z
           - new config variable, $ENV{PERL_TEST_WARNINGS_ONLY_REPORT_WARNINGS},
           for temporarily turning failures into reports
