fix done_testing for Test2 that apparently never worked
The Test::Builder switcheroo worked because Test::More invokes
$builder->done_testing, which sees the wrapped version, but
Test2::Tools::Basic::done_testing is a simple export whose monkeypatching will
not affect the exported sub.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Test-Warnings
 
 {{$NEXT}}
+          - fix Test2 compability for done_testing()
 
 0.033     2024-01-23 03:31:29Z
           - add Test2 compatibility in the test triggered by done_testing();
