--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Test-Warnings
 
 {{$NEXT}}
           - remove unneeded use of Import::Into
+          - fix tests that invoke Test::Warnings->import directly
 
 0.036     2025-01-03 18:30:28Z
           - avoid redefinition warnings when $^W is enabled in tests
